<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/artists_tab"
            style="@style/layoutTabBar"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/artists_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_artists_selected" />

            <TextView
                style="@style/tabBarText"
                android:text="@string/artists" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/albums_tab"
            style="@style/layoutTabBar">

            <ImageView
                android:id="@+id/albums_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_album" />

            <TextView
                style="@style/tabBarText"
                android:text="@string/albums" />
        </LinearLayout>

        <View style="@style/viewVertical" />

        <LinearLayout
            android:id="@+id/songs_tab"
            style="@style/layoutTabBar">

            <ImageView
                android:id="@+id/songs_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_songs" />

            <TextView
                style="@style/tabBarText"
                android:text="@string/songs" />
        </LinearLayout>

        <View style="@style/viewVertical" />

        <LinearLayout
            android:id="@+id/playlists_tab"
            style="@style/layoutTabBar">

            <ImageView
                android:id="@+id/playlists_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_playlist" />

            <TextView
                style="@style/tabBarText"
                android:text="@string/playLists" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:background="@color/colorAccent" />

</LinearLayout>